@@ -4,6 +4,7 @@
 
 #include "stdafx.h"
 #include "Storage.h"
+#include "../Helper/Helper.h"
 #include "../Helper/ProcessHelper.h"
 #include <filesystem>
 
@@ -12,6 +13,12 @@ namespace Storage
 
 std::wstring GetConfigFilePath()
 {
+	auto configPath = GetExpandedEnvironmentVariable(CONFIG_FILE_ENV_VAR_NAME);
+	if (configPath)
+	{
+		return configPath->c_str();
+	}
+
 	wchar_t currentProcessPath[MAX_PATH];
 	GetProcessImageName(GetCurrentProcessId(), currentProcessPath, std::size(currentProcessPath));
 
